RbA Build/src/objects/Received_Product__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Received Products</relationshipLabel>
        <relationshipName>Received_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <formula>Amount__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Baan_Date__c</fullName>
        <description>The date this received product record was sent to Baan.</description>
        <inlineHelpText>The date this received product record was sent to Baan.</inlineHelpText>
        <label>Sent to Baan Date</label>
        <type>Date</type>
    </fields>
    <label>Received Product</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Received Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Received Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>